test/negative/async_main_boundary/Main.hx
import rust.async.Future;

class Main {
	@:rustAsync
	static function main():Void {}
}
